chore(example): fix model relative paths and add liveness model
- Resolve model paths to absolute in OnnxModelSession for cross-platform loading
- Simplify example model paths, disable liveness by default
- Add missing MiniFASNetV2 liveness model
- Replace JDK 9+ APIs (toList, readAllBytes) with Java 8 compatible ones

Co-Authored-By: AtomCode (glm5.3-flash) <noreply@atomgit.com>